# badge-2018-nolacon

./: .gitignore  .travis.yml  Makefile.am  README.md  bootstrap.sh  configure.ac
arduino/: README.md
arduino/nola_con/: MyGame.cpp  MyGame.h  MyLed.h  MyMenu.h  MyNetwork.cpp  nola_con.ino
artwork/: README.md  copy-layer-to-any-layer.ulp
container/arduino/: Dockerfile  arduino.sh
docs/: README.md  commands.txt  flashing_badge.md  nola_badge_bom.ods  parts.txt  parts2.txt
eagle/: nola1.brd  nola1.sch  nola2.brd  nola2.sch  nola3.brd  nola4.brd  nola4.sch  nola5.brd  nola5.sch  nola5a.brd  nola5a.sch  nola6.brd  nola6.sch  nola7a.sch  nola8.brd  nola8.sch
eagle/gerbers/: nola_seeed.cam
eagle/lbr/: LD1117V33.lbr
pcb/: fp-lib-table  nola8-eagle-import.kicad_sym  nola8.kicad_prl  nola8.kicad_pro  nola8.kicad_sch  sym-lib-table
pcb/footprints/: README.md
pcb/nola8.pretty/: 1X04_325.kicad_mod  3,2_237.kicad_mod  APA102_5050.kicad_mod  B3F-10XX_377.kicad_mod  ESP12E_DEVKIT.kicad_mod  JST_B2B-PH_HEADER.kicad_mod
src/: README.md
src/menu_and_lcd_display/: MenuBackend.h  menu_and_lcd_display.ino
src/nola1/: MyButtons.cpp  MyButtons.h  MyDisplay.cpp  MyDisplay.h  MyLed.cpp  MyLed.h  MyMenu.cpp  MyMenu.h  MyNetwork.cpp  MyNetwork.h  nola1.ino
src/nola2/: nola.h  nola2.ino
src/nola3/: MyMenu.cpp  MyMenu.h  nola.h  nola3.ino
src/nola_con/: Makefile  MyButt.h  MyLed.cpp  MyLed.h  MyMenu.h  MyNetwork.cpp  MyNetwork.h  nola.h  nola_con.ino
test/: README.md  openbsd_setup.sh
test/hardware_test/: README.md  deadlocks.h  (+1 more)
tools/: Dockerfile
(+5 files in other folders)
